--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -2,10 +2,11 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    xmlns:tools="http://schemas.android.com/tools">
 
     <TextView
-        android:id="@+id/text_home"
+        android:id="@+id/text_newRecommendatio"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
@@ -16,4 +17,18 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+    <?xml version="1.0" encoding="utf-8"?>
+
+    <Button
+        android:id="@+id/recommendation"
+        android:layout_width="223dp"
+        android:layout_height="157dp"
+        android:background="#009688"
+        android:linksClickable="false"
+        android:text="New Recommendation"
+        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+        tools:layout_editor_absoluteX="94dp"
+        tools:layout_editor_absoluteY="316dp" />
+
+
 </androidx.constraintlayout.widget.ConstraintLayout>
